<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repo_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/dark1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="3dp"
            android:text="name"
            android:textColor="@color/dark"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/dark1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvdes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="3dp"
            android:text="bio"
            android:textColor="@color/dark"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/clone_url"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/dark1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvclone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="3dp"
            android:text="clone url"
            android:textColor="@color/dark"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/stars_count"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/dark1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvstars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="3dp"
            android:text="stars"
            android:textColor="@color/dark"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/forks"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/dark1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvforks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="3dp"
            android:text="forks"
            android:textColor="@color/dark"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/open_issues_count"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/dark1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvopenissues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="3dp"
            android:text="open issues"
            android:textColor="@color/dark"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/btnstar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@color/dark1"
                android:padding="5dp"
                android:textAllCaps="false"
                android:text="Star"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/btnwatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="5dp"
                android:textAllCaps="false"
                android:background="@color/dark1"
                android:text="Watch"
                android:textColor="#ffffff" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/btnfollow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textAllCaps="false"
                android:padding="5dp"
                android:background="@color/dark1"
                android:text="FOLLOW"
                android:textColor="#ffffff" />

        </RelativeLayout>
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
